--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@ body {
   font-family: -webkit-pictograph;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: rgb(205 215 223);
+  background-color: #c2d4daee;
   color: white;
 }
 
